<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:contentDescription="@string/interpreted_image"
              android:orientation="vertical">

    <TextView
            android:id="@+id/write_instructions_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/write_instructions_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp"
            android:gravity="center"/>

    <com.parse.ParseImageView
            android:id="@+id/write_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.71"
            android:contentDescription="@string/interpreted_image"/>

    <EditText
            android:id="@+id/write_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/write_instructions_hint"
            android:inputType="text"/>

</LinearLayout>