<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/orange"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/host_game_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/host_game_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"/>

        <EditText
                android:id="@+id/host_game_name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/host_number_rounds_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/host_number_rounds"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"/>

        <TextView
                android:id="@+id/host_number_rounds_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/host_suggested_rounds"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"/>

    </LinearLayout>

    <SeekBar
            android:id="@+id/host_number_rounds_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:max="8"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/host_number_players_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/host_num_players"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"/>

        <TextView
                android:id="@+id/host_number_players_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/host_suggested_players"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"/>

    </LinearLayout>

    <SeekBar
            android:id="@+id/host_number_players_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:max="8"/>

    <TextView
            android:id="@+id/host_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/host_instructions"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"/>

    <Button
            android:id="@+id/host_start_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            android:text="@string/host_start"
            android:textColor="@color/orange"/>

</LinearLayout>